Remove Visual Studio cache files and update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,10 @@ node_modules/
 dist/
 npm-debug.log*
 yarn-error.log*
+# ======================
+# Visual Studio
+# ======================
+.vs/
 
 # ======================
 # Environment
