--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,27 @@ yarn-error.log*
 # ======================
 .DS_Store
 Thumbs.db
+
+
+
+# Visual Studio
+.vs/
+bin/
+obj/
+
+# ASP.NET
+*.user
+*.suo
+
+# Angular
+node_modules/
+.angular/
+dist/
+
+# Environment
+.env
+
+# OS
+.DS_Store
+Thumbs.db
+
